fix: :bug: Bug de overflow

--- a/resources/scss/pages/admin.scss
+++ b/resources/scss/pages/admin.scss
@@ -15,6 +15,10 @@ body.admin-page {
     background: $auth-bg-gradient !important;
 }
 
+.has-navbar {
+    overflow: hidden;
+}
+
 // Asegurar que `admin-container` se mantenga en el centro y con tamaño fijo
 .admin-container {
     max-width: 400px;
